# labs_os

./: CMakeLists.txt  README.md
lab1/: CMakeLists.txt  main.cpp
lab1/include/: parent.h
lab1/src/: child.cpp  parent.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: filter.h
lab2/src/: filter.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: parent.h
lab3/src/: child.cpp  parent.cpp
tests/: CMakeLists.txt  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp
